Fixed about section text alignment for phones

--- a/styles/partials/_responsive.scss
+++ b/styles/partials/_responsive.scss
@@ -305,6 +305,10 @@
       padding-bottom: 215px;
    }
 
+   .aboutDescription p {
+      text-align: left;
+   }
+
    .skillsContainer {
       justify-content: center;
 
